logs/watchdog_20251013_0515.log
[13/10/2025  5:15:01,61] START WATCHDOG 
  File "C:\AUTOMAZIONE\odin_watchdog_mt5.py", line 192
    elif step >= 3:
    ^^^^
SyntaxError: invalid syntax
[13/10/2025  5:15:01,83] END WATCHDOG 
